--- a/app/views/prototypes/second/answers-provider.html
+++ b/app/views/prototypes/second/answers-provider.html
@@ -144,7 +144,7 @@
 
         </dl>
 
-        <a href="start-staff"  class="govuk-button govuk-button--secondary">Next question</a>
+        <a href="apprentices"  class="govuk-button govuk-button--secondary">Next question</a>
 
         
         
@@ -154,7 +154,7 @@
         <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
           
 
-<div class="govuk-width-container" onload= "retrieve_data()">
+<div class="govuk-width-container">
  
     <main class="govuk-main-wrapper " id="main-content" role="main">
 
@@ -530,7 +530,7 @@
         
      
 
-
+        </fieldset>
 
 
 <h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
