--- a/app/views/prototypes/second/apprentices.html
+++ b/app/views/prototypes/second/apprentices.html
@@ -46,7 +46,7 @@
   </ul>
 </div><br>
 
-          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-submit" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
