--- a/app/views/prototypes/second/answers-provider.html
+++ b/app/views/prototypes/second/answers-provider.html
@@ -414,6 +414,114 @@
               </a>
             </div>
           </div>
+
+          <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
+            <div class="govuk-accordion__section ">
+              <div class="govuk-accordion__section-header">
+                <h2 class="govuk-accordion__section-heading">
+                  <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                    John Adams
+                  </span>
+                </h2>
+                <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
+                  Teacher
+                </div>
+              </div>
+              <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
+                <ul class="govuk-list">
+                  <li>
+                    Personal
+
+                  </li>
+                  <li>
+                    Job role
+
+                  </li>
+                  <li>
+                    Contract
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="govuk-accordion__section ">
+              <div class="govuk-accordion__section-header">
+                <h2 class="govuk-accordion__section-heading">
+                  <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-2">
+                    Amy Cozan
+                  </span>
+                </h2>
+                <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
+                  Teacher
+                </div>
+              </div>
+              <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
+                <ul class="govuk-list">
+                  <li>
+                    <a class="govuk-link" href="#">Personal</a>
+                  </li>
+                  <li>
+                    <a class="govuk-link" href="#">Job role</a>
+                  </li>
+                  <li>
+                    <a class="govuk-link" href="#">Contract</a>
+                  </li>
+                  
+                </ul>
+              </div>
+            </div>
+            <div class="govuk-accordion__section ">
+              <div class="govuk-accordion__section-header">
+                <h2 class="govuk-accordion__section-heading">
+                  <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
+                    Frederick Epstein
+                  </span>
+                </h2>
+                <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
+                  Principles, measuring progress, spending money.
+                </div>
+              </div>
+              <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
+                <ul class="govuk-list">
+                  <li>
+                    <a class="govuk-link" href="#">Personal</a>
+                  </li>
+                  <li>
+                    <a class="govuk-link" href="#">Job role</a>
+                  </li>
+                  <li>
+                    <a class="govuk-link" href="#">Contract</a>
+                  </li>
+                  
+                </ul>
+              </div>
+            </div>
+            <div class="govuk-accordion__section ">
+              <div class="govuk-accordion__section-header">
+                <h2 class="govuk-accordion__section-heading">
+                  <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-4">
+                    Thomas Moore
+                  </span>
+                </h2>
+                <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-4">
+                  Teacher
+                </div>
+              </div>
+              <div id="accordion-with-summary-sections-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
+                <ul class="govuk-list">
+                  <li>
+                    <a class="govuk-link" href="#">Personal</a>
+                  </li>
+                  <li>
+                    <a class="govuk-link" href="#">Job role</a>
+                  </li>
+                  <li>
+                    <a class="govuk-link" href="#">Contract</a>
+                  </li>
+                  
+                </ul>
+              </div>
+            </div>
+          </div>
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
