--- a/app/views/prototypes/second/answers-provider.html
+++ b/app/views/prototypes/second/answers-provider.html
@@ -618,10 +618,10 @@
               </dl>
               <a href='subcontractor'>
                 <button class="govuk-button govuk-button--secondary" data-module="govuk-button" id="checkBtn">
-                  Add funding stream
+                  Add a member of staff
                 </button>
               </a>
-              <a href='delete-confirmation-2'>
+              <a href='delete-confirmation-2'>&nbsp;&nbsp;
               <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Delete 
               </button>
