--- a/app/views/prototypes/another-vacancies/funding.html
+++ b/app/views/prototypes/another-vacancies/funding.html
@@ -40,7 +40,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Is their teacher training qualification being funded by your organisation?
+        Is their teaching qualification being funded by your organisation?
       </h1>
     </legend><br>
     <div class="govuk-radios">
