--- a/app/views/prototypes/another-vacancies/teaching-qualification.html
+++ b/app/views/prototypes/another-vacancies/teaching-qualification.html
@@ -39,7 +39,7 @@
       <h1 class="govuk-fieldset__heading">
         Do they have professional teaching status?
       </h1>
-    </legend><br>
+    </legend>
 
     <div class="govuk-inset-text">
       This year you can select the 'Don't know' option but you will need to give an answer next year.
