--- a/app/views/prototypes/another-vacancies/what-training.html
+++ b/app/views/prototypes/another-vacancies/what-training.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What teacher training qualification are they working towards?
+        What teaching qualification are they working towards?
       </h1>
     </legend><br>
     
