--- a/app/views/prototypes/another-vacancies/details.html
+++ b/app/views/prototypes/another-vacancies/details.html
@@ -11,10 +11,6 @@
 {% block content %}
 
 
-        
-
-
-
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds"><br>
         <h1 class="govuk-heading-xl">Sign in</h1>
@@ -47,7 +43,7 @@
     
 <br>
 
-  <a href="home" class="govuk-button" type="submit">Sign in</a>
+  <a href="start-intro2" class="govuk-button" type="submit">Sign in</a>
 
   </div>
 
