--- a/app/views/prototypes/another-vacancies/home.html
+++ b/app/views/prototypes/another-vacancies/home.html
@@ -54,7 +54,7 @@
                 </div>
     
                 <div class="govuk-grid-column-one-third tile">
-                    <a class="min-height" href="start-intro2">
+                    <a class="min-height" href="start-staff">
                         <span class="govuk-heading-m heading">FE workforce</span>
                         <span class="govuk-heading-s heading">Tell us about your staff</span>
                     </a>
