--- a/app/views/prototypes/another-vacancies/start-intro2.html
+++ b/app/views/prototypes/another-vacancies/start-intro2.html
@@ -17,11 +17,6 @@
 
 {% block content %}
 
-
-
-  
-  
-
       <div class="govuk-width-container">
   <div class="govuk-breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
@@ -52,7 +47,7 @@
 
         <p class="govuk-body">The time it takes to submit will depend on how many staff you employ.</p>
 
-        <a href="start-staff" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
+        <a href="home" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
           Start now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
