--- a/app/views/prototypes/another-vacancies/start-staff.html
+++ b/app/views/prototypes/another-vacancies/start-staff.html
@@ -21,7 +21,7 @@
 
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
       
  
 
@@ -33,11 +33,17 @@
           <br><br>
         <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
-        
-        
+        <p>If you receive direct funding from ESFA you must tell us about the staff you employ.</p>
+        <div class="govuk-inset-text">
+          There are two parts to this collection. 
+          <ul class="govuk-list govuk-list--bullet">
+            <li>Save each section and return as many times as you need before you submit.</li>
+            <li>In the staff section - you have options. Complete an online form or download a template and upload it after you've added your staff.</li>
+          </ul>    
+          </div>
 
         <table class="govuk-table">
-          <!-- <caption class="govuk-table__caption">Older versions of the ILR FileMerge tool</caption> -->
+          
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
               
