--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -36,6 +36,15 @@
     <p>You must tell us about the staff you employ if you receive direct funding from ESFA.</p>
     <br>
 
+    <div class="govuk-inset-text">
+      If you receive direct funding from ESFA:
+      <ul class="govuk-list govuk-list--bullet">
+        <li>You must tell us about your subcontracting arrangements twice a
+          year, <b>even if you do not use subcontractors</b></li>
+        <li>You must tell us if anything changes</li>
+      </ul>    
+      </div>
+
     <a href="many-vacancies" class="govuk-button show-continue">
    Start a new submission
 </a>
