--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -36,14 +36,14 @@
     <p>You must tell us about the staff you employ if you receive direct funding from ESFA.</p>
     <br>
 
-    <div class="govuk-inset-text">
+   <!-- <div class="govuk-inset-text">
       If you receive direct funding from ESFA:
       <ul class="govuk-list govuk-list--bullet">
-        <li>You must tell us about your subcontracting arrangements twice a
-          year, <b>even if you do not use subcontractors</b></li>
+        <li>You must tell us about your staff every
+          year.</li>
         <li>You must tell us if anything changes</li>
       </ul>    
-      </div>
+      </div>-->
 
     <a href="many-vacancies" class="govuk-button show-continue">
    Start a new submission
@@ -83,7 +83,7 @@
           
       </tr>
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell">06/10/2019 - 12:30pm</td>
+        <td class="govuk-table__cell">06/10/2020 - 12:30pm</td>
             <td class="govuk-table__cell">Organisation</td>
         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
             Submitted
