--- a/app/views/prototypes/second/list-staff-john-end.html
+++ b/app/views/prototypes/second/list-staff-john-end.html
@@ -37,7 +37,7 @@
       <div class="govuk-grid-column-two-thirds">
 
 
-        <a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
+        <a href="add"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
 <br> <br>
 
         <h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
