--- a/app/views/prototypes/second/add.html
+++ b/app/views/prototypes/second/add.html
@@ -110,7 +110,7 @@
 
 <br><br>
 
-<h2 class="govuk-heading-m">Sex</h2>
+<h2 class="govuk-heading-m">Gender</h2>
 
 <fieldset class="govuk-fieldset">
    
@@ -136,7 +136,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
-          Other
+          Identifies in another way
         </label>
         <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
           
@@ -163,77 +163,174 @@
       <h2 class="govuk-heading-m">Ethnicity</h2>
     </legend>
     <div class="govuk-radios">
+      <label class="govuk-label--s" for="full-name">
+        White
+      </label><br><br>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          English / Welsh / Scottish / Northern Irish / British
+        </label>
+      </div>
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
-          White
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
+          Irish
         </label>
-        <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-      <li>English / Welsh / Scottish / Northern Irish / British
-      </li>
+        
+      </div>
 
-      <li>Irish</li>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
+          Gypsy or Irish Traveller
+        </label>
+        
+      </div>
 
-      <li>Gypsy or Irish Traveller</li>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
+          Roma
+        </label>
+        
+      </div>
 
-      <li>Any other White background</li>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
+          Any Other White background
+        </label>
+        
+      </div><br><br>
 
-    </ul>
-        </span>
+      <label class="govuk-label--s" for="full-name">
+        Mixed / Multiple ethnic groups
+      </label><br><br>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
+          White and Black Caribbean
+        </label>
+        
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
-          Mixed / Multiple ethnic groups
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-2">
+          White and Black African
         </label>
-        <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>White and Black Caribbean</li>
-<li>White and Black African</li>
-<li>White and Asian</li>
-<li>Any other Mixed / Multiple ethnic background</li>
-        </ul></span>
+        
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
-          Asian / Asian British
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-3">
+          White and Asian
         </label>
-        <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>Indian</li>
-<li>Pakistani</li>
-<li>Bangladeshi</li>
-<li>Any other Asian background</li>
-        </ul>
-        </span>
+        
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="white" aria-describedby="ethnic-group-4-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-4">
-          Black / African / Caribbean / Black British
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-4">
+          Any Other Mixed / multiple ethnic background
         </label>
-        <span id="ethnic-group-4-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>African</li>
-<li>Caribbean</li>
+      
+      </div><br><br>
 
-<li>Any other Black / African / Caribbean background</li>
-        </ul>
-        </span>
-      </div>
+      <label class="govuk-label--s" for="full-name">
+        Asian / Asian British
+      </label><br><br>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
-          Other ethnic group
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Indian
         </label>
-        <span id="ethnic-group-5-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>Arab</li>
-          <li>Any other ethnic group</li>
-        </ul>
-        </span>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Pakistani
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Bangladeshi
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Chinese
+        </label>
+        
+      </div>
+
+      
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Any other Asian background
+        </label>
+        
+      </div>
+
+      <br><br>
+      <label class="govuk-label--s" for="full-name">
+        Black / African / Caribbean / Black British
+      </label><br><br>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          African
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Caribbean
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Any other Black / African / Caribbean background
+        </label>
+        
+      </div>
+
+      <br><br>
+      <label class="govuk-label--s" for="full-name">
+        Other ethnic group
+      </label><br><br>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Arab
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Any other ethnic group
+        </label>
+        
       </div>
       <div class="govuk-radios__divider">or</div>
       <div class="govuk-radios__item">
@@ -246,6 +343,8 @@
   </fieldset>
 
   <br><br><br>
+
+  
 
 
   <fieldset class="govuk-fieldset">
@@ -288,7 +387,7 @@
   </fieldset>
 
 
-  
+  <br>
 
 
   
@@ -296,7 +395,7 @@
 </div>
 
 
-  <br><br><br>
+  <br><br>
 
 
           <a href="staff-zero" class="govuk-button show-continue" style="display: inline;">
