--- a/app/views/prototypes/second/mis.html
+++ b/app/views/prototypes/second/mis.html
@@ -46,7 +46,7 @@
     
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-1" name="choose" type="radio" value="#">
+        <input class="govuk-radios__input" id="" name="choose" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose">
           Return to my staff list
         </label>
@@ -55,13 +55,13 @@
       <h2 class="govuk-heading-m">Or</h2>
      
 <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-2" name="choose" type="radio" value="#">
+        <input class="govuk-radios__input" id="" name="choose" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose-2">
           Download an Excel template and add your staff information
         </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
+        <input class="govuk-radios__input" id="" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose-3">
           Upload your .xml file
         </label>
@@ -81,7 +81,7 @@
 
 
 
-            <a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
+            <a href="list-staff-john-end.html" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
       Continue
     </a>
        
