--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -45,7 +45,7 @@
       </ul>    
       </div>-->
 
-    <a href="many-vacancies" class="govuk-button show-continue">
+    <a href="already-saved" class="govuk-button show-continue">
    Start a new submission
 </a>
 
