--- a/app/views/prototypes/another-vacancies/start-staff.html
+++ b/app/views/prototypes/another-vacancies/start-staff.html
@@ -33,12 +33,13 @@
           <br><br>
         <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
-        <p>If you receive direct funding from ESFA you must tell us about the staff you employ.</p>
-        <div class="govuk-inset-text">
-          There are two parts to this collection. 
+        <p>If you receive direct funding from ESFA you must tell us about the staff you employ.</p><p>There are two parts to this collection. Save each section and return as many times as you need before you submit.</p>
+        <div class="govuk-inset-text">The staff section gives you three options: 
           <ul class="govuk-list govuk-list--bullet">
-            <li>Save each section and return as many times as you need before you submit.</li>
-            <li>In the staff section - you have options. Complete an online form or download a template and upload it after you've added your staff.</li>
+            <li>enter your staff data individually in an online form</li>
+            <li>download a template to enter your staff details and generate an XML file to upload back</li>
+            <li>upload the XML file - generated from your MI/HR system or via the downloaded template</li>
+            
           </ul>    
           </div>
 
