--- a/app/views/prototypes/second-form/already-saved.html
+++ b/app/views/prototypes/second-form/already-saved.html
@@ -40,7 +40,7 @@
             </legend>
            <p>You have a saved session that hasn't been submitted.<br>
 
-            If you start a new one, the saved declaration will be deleted. Or, you can continue to edit your saved session.</p>
+            If you start a new one, your saved information will be deleted. Or, you can continue to edit your saved session.</p>
             
             <br>
 
