--- a/app/views/prototypes/another-vacancies/start-staff.html
+++ b/app/views/prototypes/another-vacancies/start-staff.html
@@ -37,8 +37,8 @@
         <div class="govuk-inset-text">The staff section gives you three options: 
           <ul class="govuk-list govuk-list--bullet">
             <li>enter your staff data individually in an online form</li>
-            <li>download a template to enter your staff details and generate an XML file to upload back</li>
-            <li>upload the XML file - generated from your MI/HR system or via the downloaded template</li>
+            <li>download a template - enter your staff details and generate an XML file to upload back</li>
+            <li>upload an XML file - generated from your MI/HR system or via the downloaded template</li>
             
           </ul>    
           </div>
