--- a/app/views/prototypes/another-vacancies/answers-contract.html
+++ b/app/views/prototypes/another-vacancies/answers-contract.html
@@ -32,15 +32,15 @@
         
         <h1 class="govuk-heading-xl">John Adams</h1>
 
-        <h2 class="govuk-heading-m">Personal information</h2> 
-
+        
+        <h2 class="govuk-heading-m">Contract</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Date of Birth
+              How many contracts
             </dt>
             <dd class="govuk-summary-list__value">
-              10.01.1992
+              One
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
@@ -53,10 +53,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Sex
+              Main contract
             </dt>
             <dd class="govuk-summary-list__value">
-              Male
+              Permanent
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
@@ -68,10 +68,10 @@
 
          <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Ethnicity
+              Annual salary
             </dt>
             <dd class="govuk-summary-list__value">
-              White
+              £23000
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
@@ -82,14 +82,98 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Disability
+              Weekly contracted hours
             </dt>
             <dd class="govuk-summary-list__value">
-              No
+              37
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
                 Change<span class="govuk-visually-hidden"> Disability</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Full time equivalent
+            </dt>
+            <dd class="govuk-summary-list__value">
+              0.9
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Annual leave entitlement
+            </dt>
+            <dd class="govuk-summary-list__value">
+              23
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Start date
+            </dt>
+            <dd class="govuk-summary-list__value">
+              20.09.2019
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              How long in current position
+            </dt>
+            <dd class="govuk-summary-list__value">
+              1 to 3 years
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              How long in further education
+            </dt>
+            <dd class="govuk-summary-list__value">
+              4 to 10 years
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Do they still work for your organisation
+            </dt>
+            <dd class="govuk-summary-list__value">
+            Yes
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
           </div>
