--- a/app/views/prototypes/another-vacancies/answers-job.html
+++ b/app/views/prototypes/another-vacancies/answers-job.html
@@ -32,15 +32,15 @@
         
         <h1 class="govuk-heading-xl">John Adams</h1>
 
-        <h2 class="govuk-heading-m">Personal information</h2> 
+        <h2 class="govuk-heading-m">Job role</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Date of Birth
+              Roles
             </dt>
             <dd class="govuk-summary-list__value">
-              10.01.1992
+              Teacher, manager
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
@@ -53,10 +53,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Sex
+              Main role
             </dt>
             <dd class="govuk-summary-list__value">
-              Male
+              Teacher
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
@@ -68,10 +68,10 @@
 
          <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Ethnicity
+              Subjects they teach
             </dt>
             <dd class="govuk-summary-list__value">
-              White
+              Animal Care
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
@@ -82,14 +82,98 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Disability
+              Highest level they teach
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Level 2
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Disability</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Highest qualification - Maths
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Level 4
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Highest qualification - English
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Level 4
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Highest teaching qualification
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Level 4
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Professional teaching status
+            </dt>
+            <dd class="govuk-summary-list__value">
+              None of these
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Working in industry 
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Less than one year
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Still work in industry 
             </dt>
             <dd class="govuk-summary-list__value">
               No
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
-                Change<span class="govuk-visually-hidden"> Disability</span>
+                Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
           </div>
