--- a/app/views/prototypes/another-vacancies/answers-john.html
+++ b/app/views/prototypes/another-vacancies/answers-john.html
@@ -35,7 +35,7 @@
 
         <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
-        <h2 class="govuk-heading-m">Personal</h2>
+        <h2 class="govuk-heading-m">Personal information</h2>
         
 
        
