--- a/app/views/prototypes/another-vacancies/complete-john-four.html
+++ b/app/views/prototypes/another-vacancies/complete-john-four.html
@@ -50,11 +50,9 @@
           <dt class="govuk-summary-list__key">
             <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
               <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
-                Personal
+                Personal information
               </a></h3>
-              <p>
-                Male<br>
-              White</p>
+              
           </dt>
           
           <dd class="govuk-summary-list__actions">
@@ -65,10 +63,9 @@
           <dt class="govuk-summary-list__key">
             <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
               <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                <a href="role" class="govuk-link govuk-link--no-visited-state">
+                <a href="answers-job" class="govuk-link govuk-link--no-visited-state">
                   Job role</a></h3>
-                 <p>
-                    Senior leader<br>
+                 
           </dt>
          
           <dd class="govuk-summary-list__actions">
