--- a/app/views/prototypes/another-vacancies/complete-john-five.html
+++ b/app/views/prototypes/another-vacancies/complete-john-five.html
@@ -53,11 +53,9 @@
           <dt class="govuk-summary-list__key">
             <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
               <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
-                Personal
+                Personal information
               </a></h3>
-              <p>
-              Male<br>
-            White</p>
+            
           </dt>
           
           <dd class="govuk-summary-list__actions">
@@ -68,10 +66,9 @@
           <dt class="govuk-summary-list__key">
             
               <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                <a href="role" class="govuk-link govuk-link--no-visited-state">
+                <a href="answers-job" class="govuk-link govuk-link--no-visited-state">
                   Job role</a></h3>
-                 <p>
-                    Senior leader<br>
+                 
                   
           </dt>
          
@@ -82,10 +79,9 @@
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-              <a href="what-contract" class="govuk-link govuk-link--no-visited-state">
+              <a href="answers-contract" class="govuk-link govuk-link--no-visited-state">
                 Contract</a></h3>
-                <p>
-                  Permanent<br>
+                
                 
           </dt>
           
