--- a/app/views/prototypes/another-vacancies/complete-john.html
+++ b/app/views/prototypes/another-vacancies/complete-john.html
@@ -48,12 +48,12 @@
             <dt class="govuk-summary-list__key">
               <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                 <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
-                  Personal
+                  Personal information
                 </a></h3>
-                <p>
+                <!--<p>
                   Male<br>
                 White 
-            </p>
+            </p>-->
             </dt>
             
             <dd class="govuk-summary-list__actions">
