--- a/app/views/prototypes/another-vacancies/answers-staff-julie.html
+++ b/app/views/prototypes/another-vacancies/answers-staff-julie.html
@@ -32,6 +32,7 @@
         
         <h1 class="govuk-heading-xl">Julie Ann Angelo</h1>
 
+        <h2 class="govuk-heading-m">Personal information</h2>
         
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -94,19 +95,7 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Nationality
-            </dt>
-            <dd class="govuk-summary-list__value">
-              EU including Irish
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="">
-                Change<span class="govuk-visually-hidden"> Nationality</span>
-              </a>
-            </dd>
-          </div>
+          
           
 
         </dl>
