--- a/app/views/prototypes/another-vacancies/complete-julie-five.html
+++ b/app/views/prototypes/another-vacancies/complete-julie-five.html
@@ -50,11 +50,9 @@
           <dt class="govuk-summary-list__key">
             <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
               <a href="answers-staff-julie" class="govuk-link govuk-link--no-visited-state">
-                Personal
+                Personal information
               </a></h3>
-              <p>
-              Female<br>
-            White</p>
+              
           </dt>
           
           <dd class="govuk-summary-list__actions">
