--- a/app/views/prototypes/another-vacancies/start-staff.html
+++ b/app/views/prototypes/another-vacancies/start-staff.html
@@ -20,10 +20,17 @@
 {% block content %}
 
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+
+    <div class="govuk-body account-info">
+      <div>
+          <span class="your-name" id="bannerUserName">Sam Smith UKPRN:123456 </span><a class="account-link" href="./exit-survey" id="signout-link">Sign out</a>
+      </div>
+
+
+  </div>
       
- 
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
 
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1><br>
