--- a/app/views/prototypes/another-vacancies/start-staff.html
+++ b/app/views/prototypes/another-vacancies/start-staff.html
@@ -23,7 +23,7 @@
 
     <div class="govuk-body account-info">
       <div>
-          <span class="your-name" id="bannerUserName">Sam Smith UKPRN:123456 </span><a class="account-link" href="./exit-survey" id="signout-link">Sign out</a>
+          <span class="your-name" id="bannerUserName">Sam Smith UKPRN:123456 </span><a class="account-link" href="details" id="signout-link">Sign out</a>
       </div>
 
 
@@ -41,14 +41,7 @@
         <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
         <p>If you receive direct funding from ESFA you must tell us about the staff you employ.</p><p>There are two parts to this collection. Save each section and return as many times as you need before you submit.</p>
-        <div class="govuk-inset-text">The staff section gives you three options: 
-          <ul class="govuk-list govuk-list--bullet">
-            <li>enter your staff data individually in an online form</li>
-            <li>download a template - enter your staff details and generate an XML file to upload back</li>
-            <li>upload an XML file - generated from your MI/HR system or via the downloaded template</li>
-            
-          </ul>    
-          </div>
+        
 
         <table class="govuk-table">
           
