--- a/app/views/prototypes/another-vacancies/mis.html
+++ b/app/views/prototypes/another-vacancies/mis.html
@@ -32,13 +32,21 @@
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-grid-column-full">
         
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
  How do you want to tell us about your staff?
 </h1>
+<div class="govuk-inset-text">The staff section gives you three options: 
+  <ul class="govuk-list govuk-list--bullet">
+    <li>enter your staff data individually in an online form</li>
+    <li>download a template - enter your staff details and generate an XML file to upload back</li>
+    <li>upload an XML file - generated from your MI/HR system or via the downloaded template</li>
+    
+  </ul>    
+  </div><br>
 
 
   <div class="govuk-form-group">
