--- a/app/views/prototypes/another-vacancies/mis.html
+++ b/app/views/prototypes/another-vacancies/mis.html
@@ -39,14 +39,14 @@
             <h1 class="govuk-heading-xl">
  How do you want to tell us about your staff?
 </h1>
-<div class="govuk-inset-text">The staff section gives you three options: 
+<div class="govuk-inset-text">You have three options: 
   <ul class="govuk-list govuk-list--bullet">
-    <li>enter your staff data individually in an online form</li>
+    <li>enter your staff details individually in an online form</li>
     <li>download a template - enter your staff details and generate an XML file to upload back</li>
     <li>upload an XML file - generated from your MI/HR system or via the downloaded template</li>
     
   </ul>    
-  </div><br>
+  </div>
 
 
   <div class="govuk-form-group">
