--- a/app/views/prototypes/final-vacancies/answers-provider.html
+++ b/app/views/prototypes/final-vacancies/answers-provider.html
@@ -122,9 +122,8 @@
               Difficult to fill
             </dt>
             <dd class="govuk-summary-list__value">
-              Digital / ICT
-
-- Elements of the post had to be changed
+              Construction, Planning and the Built Environment
+- No applicants
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -138,7 +137,7 @@
               
             </dt>
             <dd class="govuk-summary-list__value">
-              Performing arts - It wasn't filled in a reasonable time
+              Digital / ICT - No applicants
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
