--- a/app/views/prototypes/final-vacancies/open.html
+++ b/app/views/prototypes/final-vacancies/open.html
@@ -40,7 +40,7 @@
             </legend>
 
             <div id="citizenship-conditional-hint" class="govuk-hint">
-              Enter the number for each subject
+              Enter the number of vacancies that have started but are not completed
               </div>
           
             <br>
