--- a/app/views/prototypes/final-vacancies/difficult.html
+++ b/app/views/prototypes/final-vacancies/difficult.html
@@ -78,7 +78,24 @@
 
           
           </fieldset>
-        </div><br>
+        </div>
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+           
+            <div class="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+                <label class="govuk-label govuk-checkboxes__label" for="waste">
+                  We didn't have any difficulties with recruitment
+                </label>
+              </div>
+              
+              
+            </div>
+        
+          </fieldset>
+        </div><br><br>
+      
 
 
           <a href="difficult-reason" class="govuk-button show-continue" style="display: inline;">
