--- a/app/views/prototypes/final-vacancies/confirmation-provider.html
+++ b/app/views/prototypes/final-vacancies/confirmation-provider.html
@@ -29,7 +29,7 @@
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-grid-column-full">
         
           <div class="govuk-form-group">
 
