--- a/app/views/prototypes/final-vacancies/confirmation.html
+++ b/app/views/prototypes/final-vacancies/confirmation.html
@@ -24,42 +24,33 @@
 
  
 
+<div class="govuk-width-container">
+  <main class="govuk-main-wrapper " id="main-content" role="main">
 
+     
+      <div class="govuk-panel govuk-panel--confirmation">
+        <h1 class="govuk-panel__title">
+          Staff details submitted
+        </h1>
+        <div class="govuk-panel__body">
+          By Florence Bridger <br> <span id="datetime">Monday, 15 February 2021</span>, <span id="hour">10:07 AM</span>
+        </div>
+      </div>
+      <br>
+      <h3 class="govuk-heading-m">What happens next</h3>
+      <p>We will send you an email to confirm we have received your workforce collection details.</p>
+      <h3 class="govuk-heading-s">You may want to:</h3>
+      <a href="start-staff-end" class="govuk-link"><p>Return to your start page</p></a>
+      <h3 class="govuk-heading-m">Feedback survey</h3>
+      <p>Did you have any problem using this service? Are there any improvements that would make it work better for you? Please take 2 minutes to let us know by filling in the <a href="#">feedback survey</a>. Your feedback helps us to improve and develop this service.</p>
+      
+          
+  </main>
+</div>
   
             
 
-  <div class="govuk-width-container">
-  <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-panel govuk-panel--confirmation">
-          <h1 class="govuk-panel__title">
-            Staff details submitted
-          </h1>
-          <div class="govuk-panel__body">
-            Your reference number<br><strong>HDJ2123F</strong>
-          </div>
-        </div>
-
-        <p class="govuk-body">We have sent you a confirmation email.</p>
-
-        
-        <h2 class="govuk-heading-m">Return to your <a href="start-staff-end" class="govuk-link">start page</a></h2>
-
-        <!--<p class="govuk-body">
-          We’ve sent your application to Hackney Electoral Register Office.
-        </p>-->
-        <p class="govuk-body">
-          We will contact you to confirm your submission or to ask for more information.
-        </p>
-
-        <p class="govuk-body">
-          <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
-        </p>
-      </div>
-    </div>
-  </main>
-</div>
+  
 </div>
 
 
