--- a/app/views/prototypes/final-vacancies/confirmation-provider.html
+++ b/app/views/prototypes/final-vacancies/confirmation-provider.html
@@ -44,7 +44,7 @@
   
 
   <h3 class="govuk-heading-m govuk-!-margin-bottom-1">
-    <a href="start-staff" class="govuk-link govuk-link--no-visited-state">
+    <a href="start-staff1" class="govuk-link govuk-link--no-visited-state">
       You need to tell us about your staff.
     </a>
   </h3>
