--- a/app/views/prototypes/final-vacancies/start-staff1.html
+++ b/app/views/prototypes/final-vacancies/start-staff1.html
@@ -4,56 +4,81 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
+  <div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      beta
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
 
 {% endblock %}
 
 {% block content %}
 
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-      <a href="#" class="govuk-back-link">Back</a>
- 
+
+    <div class="govuk-body account-info">
+      <div>
+          <span class="your-name" id="bannerUserName">Sam Smith UKPRN:123456 </span><a class="account-link" href="details" id="signout-link">Sign out</a>
+      </div>
+
+
+  </div>
+      
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
 
   <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1><br>
 
   
-        <h1 class="govuk-heading-xl">FE staff collection<br>
-        <span class="govuk-caption-xl">August 2021 to September 2022</span></h1>
+        <h1 class="govuk-heading-xl">Tell us about your further education staff
+          <br><br>
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
-        <p class="govuk-body">As stated in the funding rules you must tell us about the staff you employ.<br>You need to complete two parts. </p>
+        <p>If you receive direct funding from ESFA you must tell us about the staff you employ.</p><p>There are two parts to this collection. Save each section and return as many times as you need before you submit.</p>
+        
 
-        <nav role="navigation">
-  <ul class="browse-list">
-    
-      <li class="browse-list-item">
-        <a class="browse-list-item-link" href="staff-totals">About my organisation</a>
         
-        
-      </li>
-    
+          
+          <table class="govuk-table">
+
+            <thead class="govuk-table__head">
+              <tr class="govuk-table__row">
+                
+                <th class="govuk-table__header" scope="col"></th>
+            
+                <th class="govuk-table__header" scope="col"></th>
+                <th class="govuk-table__header" scope="col"></th>
+              </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+              <tr class="govuk-table__row">
+                
+                <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="answers-provider">Your organisation</a>
+                    </td>
+                <td class="govuk-table__cell" scope="row"> </td>
+                <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>
+              </tr>
+              <tr class="govuk-table__row">
+              
+                <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">Your staff</a>
+                  <p class="govuk-body">Your full-time, part-time and temporary staff. <p>Include senior leaders, managers, teachers, teaching support and administration staff.</p>
+                </td>
+                <td class="govuk-table__cell" scope="row">       </td>
+                <td class="govuk-table__cell"></td>
+              </tr>
+              
+              
+            
+            
+            </tbody>
+            </table> 
       
-    
-      <li class="browse-list-item">
-        <a class="browse-list-item-link" a href="mis">My staff</a>
-
-        
-        
-      </li>
-    
-  </ul>
-</nav>
-
-
-        
-
-       
-      
-        
-
-        
       </div>
 
       
