--- a/app/views/prototypes/final-vacancies/add.html
+++ b/app/views/prototypes/final-vacancies/add.html
@@ -163,11 +163,16 @@
       <h2 class="govuk-heading-m">Ethnicity</h2>
     </legend>
     <div class="govuk-radios">
-      <label class="govuk-label--s" for="full-name">
-        White
-      </label><br><br>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <input class="govuk-radios__input" id="" name="ethnic-group" type="radio" value="white">
+        <label class="govuk-label govuk-radios__label" for="white">
+          White
+        </label>
+      </div>
+
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live" name="ethnic-group" type="radio" value="english">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           English / Welsh / Scottish / Northern Irish / British
         </label>
